--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ theme: jekyll-agency
 url    : "" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 
-title      : Your Awesome Website
-email      : your-email@example.com #this is also the email contact forms will go to
+title      : Squadra Labs
+email      : info@squadralabs.com #this is also the email contact forms will go to
 description: "Site description"
 author     : Your Name
 # logo:     #optional, defaults to site title
@@ -26,8 +26,8 @@ author     : Your Name
 
 locale: "en-US" # See available languages in _data/sitetext.yml
 
-analytics:
-  google: #Google Analytics tracking code here
+# analytics:
+#   google: #Google Analytics tracking code here
 
 collections:
   portfolio:
